--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Project Two: Timers</title>
+    <title>Practice-Timers</title>
     <link rel="stylesheet" href="./semantic-dist/semantic.css" />
     <link rel="stylesheet" href="style.css" />
     <script src="vendor/babel-standalone.js"></script>
@@ -24,12 +24,6 @@
       type="text/babel"
       data-plugins="transform-class-properties"
       src="./js/app.js"
-    ></script>
-    <!-- Delete the script tag below to get started. -->
-    <script
-      type="text/babel"
-      data-plugins="transform-class-properties"
-      src="./js/app-complete.js"
     ></script>
   </body>
 
