--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Practice-Timers</title>
     <link rel="stylesheet" href="./semantic-dist/semantic.css" />
     <link rel="stylesheet" href="style.css" />
@@ -15,7 +16,7 @@
 
   <body>
     <div id="main" class="main ui">
-      <h1 class="ui dividing centered header">Timers</h1>
+      <h1 class="ui centered header">Timers</h1>
       <div id="content"></div>
     </div>
     <script type="text/babel" src="./js/client.js"></script>
